--- a/css/style.css
+++ b/css/style.css
@@ -1,15 +1,24 @@
 body {
-  min-width: 800px; /*[DL] Использовать body, как общую обёртку, не совсем удобно. Лучше использовать 
-  див с одним из классов, например: wrapper, container, page-wrapper, page-container. 
-  Общай обёртка часто бывает полезна для стилей, которые не хочется назначать на body.*/
   margin: 0;
   padding: 0;
 
   color: black;
   font-family: PTSans, Arial, serif;
+  }
+
+h1 {
+  color: black;
+  font-family: PTSans, Arial, serif;
+  font-size: 30px;
+  font-weight: 700;
+  }
+
+h2 {
+  color: black;
+  font-family: PTSans, Arial, serif;
   font-size: 14px;
   font-weight: 700;
-  line-height: 24px; /*[DL] Размеры шрифтов, жирность, межстрочный интервал я бы рекомендовал задавать конкретно нужному тэг, а лучше классу.*/
+  line-height: 18px;
   }
 
 .clearfix:after {
@@ -24,7 +33,7 @@ body {
   }
 
 .container {
-  width: 960px; /*[DL] Вот как раз у тебя общая обёртка*/
+  width: 960px;
   margin: 0 auto;
   }
 
@@ -139,7 +148,8 @@ body {
   width: 240px;
   }
 
-.catalog-item:nth-child(3n+4) { /*[DL] Зачем такой сложный селектор?*/
+.catalog-item:nth-child(3n+4) {
+  /*[DL] Зачем такой сложный селектор?*/
   clear: both;
   }
 
@@ -199,20 +209,3 @@ body {
   }
 
 /* END catalog-item page*/
-
-/*[DL] Стили, которые ты описываешь глобально, лучше всего, писать в самом начале*/
-
-h1 {
-  color: black;
-  font-family: PTSans, Arial, serif;
-  font-size: 30px;
-  font-weight: 700;
-  }
-
-h2 {
-  color: black;
-  font-family: PTSans, Arial, serif;
-  font-size: 14px;
-  font-weight: 700;
-  line-height: 18px;
-  }
