--- a/css/style.css
+++ b/css/style.css
@@ -153,6 +153,7 @@ h2 {
 
 .to-left {
   float: left; /*[DL] Хелперы тоже стоит писать в самом начале. Можно законментировать*/
+}
 
 .to-right {
   float: right;
