--- a/css/style.css
+++ b/css/style.css
@@ -1,71 +1,30 @@
-html,
-body,
-div,
-span,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p,
-a,
-img,
-ol,
-ul,
-li,
-fieldset,
-form,
-label,
-legend,
-article,
-figure,
-figcaption,
-footer,
-header,
-menu,
-nav,
-section {
-  margin: 0;
-  padding: 0;
-}
-
-/*[DL] Писал тебе о том, что не стоит так сбрасывать свойства у всех этих элементов глобально*/
-
 body {
-  margin: 0; /*[DL] Где-то уже эти стили были*/
-  padding: 0;
-  font-family: PTSans, Arial, serif;
-  color: black;
-}
+  min-width: 960px;
 
-h1 {
-  font-weight: 700;
-  font-size: 30px;
-  font-family: PTSans, Arial, serif;
-  color: black;
-}
-
-h2 {
   font-weight: 700;
   font-size: 14px;
-  line-height: 18px;
-  font-family: PTSans, Arial, serif;
-  color: black;
-}
-
-.btn {
-  display: inline-block;
-  padding: 15px 20px;
-
-  vertical-align: top;
+  line-height: 24px;
+  font-family: "PT Sans Narrow", sans-serif;
   color: #ffffff;
   text-transform: uppercase;
-  text-decoration: none;
 
-  background: #000000;
-  border-width: 0;
+  background: #111111 url("../img/bg.jpg") no-repeat center top;
 }
+
+.container {
+  width: 940px;
+  margin: 0 auto;
+  padding: 0 10px;
+}
+
+.to-left {
+  float: left;
+}
+
+.to-right {
+  float: right;
+}
+
 .clearfix:before,
 .clearfix:after {
   content: "";
@@ -79,19 +38,19 @@ h2 {
 
 /* START index page*/
 .main-header {
-  padding: 5px 0;
-}
+  margin-bottom: 60px;
 
-.container {
-  width: 940px;
-  margin: 0 auto;
-  padding-right: 10px;
-  padding-left: 10px;
+  background: #000000;
 }
 
 .main-navigation {
   float: left;
-  width: 790px;
+  width: 780px;
+}
+
+.user-block {
+  float: right;
+  max-width: 140px;
 }
 
 .main-navigation ul {
@@ -99,85 +58,382 @@ h2 {
   padding: 0;
 
   list-style: none;
+  font-size: 0;
 }
 
 .main-navigation li {
   display: inline-block;
-  margin-right: 5px;
+
+  font-size: 16px;
+  line-height: 20px;
+  vertical-align: top;
 }
 
 .main-navigation a {
-  font-weight: 700;
-  font-size: 16px;
-  text-transform: uppercase;
+  display: block;
+  padding: 25px 20px;
+
+  color: #ffffff;
   text-decoration: none;
 }
 
-.user-block {
-  float: right;
-  width: 150px;
+.main-navigation a:hover {
+  background: #242424;
 }
 
-.main-container {
-  margin: 30px auto;
+.main-navigation .active a {
+  position: relative;
+}
+
+.main-navigation .active a:hover {
+  background: none;
+}
+
+.main-navigation .active a:after {
+  content: "";
+  position: absolute;
+  right: 20px;
+  bottom: 0;
+  left: 20px;
+
+  height: 5px;
+
+  background: white;
+}
+
+.login {
+  position: relative;
+
+  display: inline-block;
+  padding: 25px 20px;
+  padding-left: 50px;
+
+  font-size: 16px;
+  line-height: 20px;
+  vertical-align: top;
+  color: #ffffff;
+  text-decoration: none;
+}
+
+.login:hover {
+  background: #242424;
+}
+
+.login:before {
+  content: "";
+  position: absolute;
+  top: 28px;
+  left: 10px;
+
+  width: 23px;
+  height: 20px;
+
+  background: transparent url("../img/sprites.png") no-repeat;
+  background-position: 0 0;
+}
+
+.login:hover:before {
+  opacity: 0.3;
 }
 
 .logo {
   width: 368px;
+  height: 204px;
   margin: 0 auto;
-  margin-bottom: 20px;
+  margin-bottom: 25px;
 }
 
-.featured-row {
-  margin-bottom: 35px;
+.logo img {
+  width: 368px;
+  height: 204px;
+}
+
+.features-row {
+  margin-bottom: 80px;
 }
 
 .features-item {
   float: left;
   width: 300px;
   margin-right: 20px;
+
+  text-align: center;
 }
 
 .features-item:last-child {
   margin-right: 0;
 }
 
+.features-title {
+  position: relative;
+
+  margin-bottom: 30px;
+  padding-bottom: 50px;
+
+  font-size: 30px;
+  line-height: 42px;
+}
+
+.features-item p {
+  margin: 10px;
+}
+
+.features-title:after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+
+  display: block;
+  width: 20px;
+  height: 20px;
+  margin-left: -10px;
+
+  background: #ffffff;
+  transform: rotate(45deg);
+}
+
 .index-content {
+  margin-bottom: 35px;
+  padding: 50px 80px;
+
+  color: #000000;
+
+  background: url("../img/separator-content.png") no-repeat center,
+  #f8f5f2 url("../img/bg-pattern-content.png");
+}
+
+.content-column.to-left {
+  width: 350px;
+}
+
+.content-column.to-right {
+  width: 300px;
+}
+
+.content-column-title {
+  margin: 0;
+  margin-bottom: 35px;
+
+  font-size: 30px;
+  line-height: 42px;
+}
+
+.news-preview {
+  margin: 0;
+  padding: 0;
+
+  list-style: none;
+}
+
+.news-preview li {
+  margin-bottom: 25px;
+}
+
+.news-preview time {
+  text-transform: none;
+}
+
+.btn {
+  display: inline-block;
+  margin-right: 16px;
+  padding: 10px 33px;
+
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 24px;
+  font-family: "PT Sans Narrow", sans-serif;
+  vertical-align: top;
+  text-align: center;
+  color: #ffffff;
+  text-transform: uppercase;
+  text-decoration: none;
+
+  background: #000000;
+  border: none;
+  outline: none;
+  cursor: pointer;
+}
+
+.btn:hover,
+.btn:active {
+  background: #663d15;
+}
+
+.btn:disabled {
+  cursor: default;
+  opacity: 0.5;
+}
+
+.btn:disabled:hover {
+  background: #000000;
+}
+
+.gallery {
+  position: relative;
+
+  height: 260px;
+}
+
+.gallery-content {
+  height: 164px;
+  margin: 0;
+
+  background: #cccccc;
+  border: 7px solid white;
+}
+
+.gallery-content img {
+  width: 286px;
+  height: 164px;
+}
+
+.gallery .btn {
+  position: absolute;
+  bottom: 0;
+
+  width: 140px;
+  margin: 0;
+}
+
+.gallery-prev {
+  left: 0;
+}
+
+.gallery-next {
+  right: 0;
+}
+
+.index-content p {
+  margin: 0;
+  margin-bottom: 25px;
+}
+
+.appointment-form  input {
+  float: left;
+  width: 106px;
+  margin-right: 20px;
   margin-bottom: 20px;
-  padding: 35px 40px;
+  padding: 10px 15px;
+
+  font-size: 14px;
+  line-height: 24px;
+  font-family: "PT Sans Narrow", sans-serif;
+  color: #000000;
+  text-transform: uppercase;
+
+  background: #f9f6f3;
+  border: 2px solid #000000;
+  outline: none;
 }
 
-.content-column {
-  width: 400px;
+.appointment-form  input:focus {
+  border: 2px solid #663d15;
 }
 
-.to-left {
-  float: left; /*[DL] Хелперы тоже стоит писать в самом начале. Можно законментировать*/
+.appointment-form  input:nth-child(2n) {
+  margin-right: 0;
 }
 
-.to-right {
-  float: right;
+.appointment-form .btn {
+  clear: both;
+  width: 100%;
 }
 
 .main-footer {
-  padding: 20px 0;
+  margin-top: 60px;
+  padding-top: 60px;
+  padding-bottom: 40px;
+
+  background: #252525 url("../img/bg-pattern-footer.png");
 }
 
 .footer-contacts {
   float: left;
-  width: 380px;
-  margin-right: 20px;
+  width: 320px;
+  margin-right: 80px;
+}
+
+.footer-contacts a {
+  color: #ffffff;
 }
 
 .footer-social {
   float: left;
-  width: 140px;
-  margin-right: 20px;
+
+  text-align: center;
 }
 
 .footer-copyright {
   float: right;
-  width: 200px;
+  max-width: 320px;
+}
+
+.footer-contacts a:hover {
+  text-decoration: none;
+}
+
+.footer-social p {
+  margin: 0;
+  margin-bottom: 15px;
+}
+
+.social-btn {
+  display: inline-block;
+  width: 43px;
+  height: 43px;
+  margin: 0 2px;
+
+  font-size: 0;
+  vertical-align: top;
+  text-decoration: none;
+
+  background: #000000 url("../img/sprites.png") no-repeat center;
+}
+
+.social-btn:hover {
+  background-color: #ffffff;
+}
+
+.social-btn-vk {
+  background-position: 9px -38px;
+}
+
+.social-btn-fb {
+  background-position: 7px -86px;
+}
+
+.social-btn-inst {
+  background-position: 9px -138px;
+}
+
+.social-btn-vk:hover {
+  background-position: -41px -38px;
+}
+
+.social-btn-fb:hover {
+  background-position: -43px -86px;
+}
+
+.social-btn-inst:hover {
+  background-position: -43px -138px;
+}
+
+.footer-copyright p {
+  margin: 0;
+  margin-bottom: 15px;
+
+  text-align: center;
+}
+
+.footer-copyright .btn {
+  margin-right: 0;
+}
+
+.footer-copyright .btn:hover {
+  color: #000000;
+
+  background: #ffffff;
 }
 /* END index page*/
 
@@ -238,7 +494,7 @@ h2 {
   line-height: 18px;
   font-family: PTSans, Arial, serif;
   vertical-align: top;
-  color: black;
+  color: #000000;
 }
 
 .item-photo {
